# magikarp

./: .env.example  .gitignore  .goreleaser.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.fastapi  LICENSE  Makefile  Modelfile  README.md  config.json  config.yaml  docker-compose.yaml  entrypoint.sh  go.mod  go.sum  main.go  plan.md  pyproject.toml  test_speech.md  test_speech.sh  tools.json
.github/workflows/: release.yaml
app/: dependencies.py  main.py
app/models/: plugins.py  requests.py  responses.py
app/plugins/: __init__.py  base.py  manager.py
app/routers/: __init__.py  chat.py  plugins.py
app/services/: __init__.py  data.py  model.py
app/utils/: prompts.py
cmd/: root.go
cmd/magikarp/: main.go
cmd/mgk/: main.go
docs/: speech_mode.md
internal/agent/: schema.go
internal/config/: config.go
internal/llm/: anthropic.go
internal/orchestration/: registry.go
internal/providers/: types.go
internal/speech/: dummy.go  listener.go  recognizer.go
internal/terminal/: help.go  input.go  menu.go  model_select.go  slash_commands.go  state.go  styles.go  ui.go  welcome.go
internal/tools/: toolbox.go
internal/utils/: schema_validator.go
magikarp/: dependencies.py  main.py  settings.py
magikarp/enums/: prompts.py  rules.py
magikarp/models/: actions.py  requests.py  responses.py
magikarp/routers/: __init__.py  chat.py  notifications.py  recommendations.py  rules.py
magikarp/services/: data.py  manager.py  model.py  rules.py  snapshots.py
magikarp/static/: prompts.py
prompts/: SYSTEM.md
scripts/: download_model.sh
(+110 files in other folders)
