[tool.poetry]
name = "magikarp"
version = "0.1.0"
description = "Nothing: Software developer take-home test"
authors = ["pprunty <pprunty@tcd.ie>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
ollama = "^0.2.1"
httpx = "^0.27.0"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
