[tool.poetry]
name = "magikarp"
version = "0.1.0"
description = "Autonomous agent"
authors = ["pprunty <pprunty@tcd.ie>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]  # This line specifies the app directory

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.11"}
ollama = "^0.4.7"
httpx = "^0.27.0"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"